--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer</title>
+    <title> Web development </title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,800;1,75..100,800&display=swap');
+    </style>
+
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div class="banner">
+            <div>
+                <h3>All Thinks Are Possible If You believe</h3>
+                <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words </p>
+            </div>
 
+        </div>
     </header>
     <main>
 
